--- a/Avancerad.NET-Projekt/appsettings.json
+++ b/Avancerad.NET-Projekt/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Connection": "server = DESKTOP-HTI6DCF; database = Avancerad.NET-Projekt-DB; TrustServerCertificate=True; Trusted_Connection = True; Integrated security = True"
+    "Connection": "server = DESKTOP-HTI6DCF; database = Avancerad.NET-Projekt-DB-2; TrustServerCertificate=True; Trusted_Connection = True; Integrated security = True"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "key": "YcxjOMewdFfeZFQm5iGAYxTjR23Z93rLbyZucty3",
+    "Issuer": "https://localhost:7291",
+    "Audience": "https://localhost:7291"
+  }
 }
